# facialRecognition

./: .gitignore  CMakeLists.txt  README  README.md  requirements.txt
include/: config.hpp  detector.hpp  emotion.hpp  recognizer.hpp  renderer.hpp  tracker.hpp  types.hpp  utils.hpp
src/: detector.cpp  emotion.cpp  main.cpp  recognizer.cpp  renderer.cpp  tracker.cpp  utils.cpp
